--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Lint and Test
 # Controls when the workflow will run
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ * ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
