--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +20,16 @@
     "react-markdown": "5.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
     "@types/next-auth": "3.1.14",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
+    "babel-jest": "^27.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
     "prisma": "3.5.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "4.5.2"
   }
 }
