--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Lint and Test
-
-# Controls when the workflow will run
 on:
   pull_request:
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  test:
     runs-on: ubuntu-latest
     
     steps:
       - uses: actions/setup-node@v2.4.1
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      - name: Install
+        run: npm install
+
       - name: Test
         run: npm run test
