vercel deployment via gh actions

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,7 @@
   "public": false,
   "github": {
     "enabled": false
-  }
+  },
+  "orgId":"XRrbmMHySmMZjLOttzi7hDnv",
+  "projectId":"prj_gEL7BvZDMoKKLDVPCThVRxgSjL32"
 }
