--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Lint and Test
+name: Test & Deploy
 on:
   pull_request:
   workflow_dispatch:
@@ -18,6 +18,7 @@ jobs:
         run: npm run test
   deploy:
       runs-on: ubuntu-latest
+      needs: test
       steps:
         - uses: actions/checkout@v2
         - uses: amondnet/vercel-action@v20
