--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
     steps:
       - uses: actions/setup-node@v2.4.1
       - uses: actions/checkout@v2
@@ -17,14 +16,15 @@ jobs:
       - name: Test
         run: npm run test
   deploy:
-      runs-on: ubuntu-latest
-      needs: test
-      steps:
-        - uses: actions/checkout@v2
-        - uses: amondnet/vercel-action@v20
-          with:
-            vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-            # vercel-args: '--prod' #Optional
-            vercel-org-id: ${{ secrets.ORG_ID}}  #Required
-            vercel-project-id: ${{ secrets.PROJECT_ID}} #Required 
-            # working-directory: ./sub-directory
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+          # vercel-args: '--prod' #Optional
+          vercel-org-id: ${{ secrets.ORG_ID}}  #Required
+          vercel-project-id: ${{ secrets.PROJECT_ID}} #Required 
+          github-comment: true
+          # working-directory: ./sub-directory
