--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm install
 
       - name: Test
-        run: npm run test
+        run: cd app && npm run test
   deploy:
     runs-on: ubuntu-latest
     needs: test
@@ -28,4 +28,4 @@ jobs:
           vercel-project-id: ${{ secrets.PROJECT_ID}} #Required 
           github-comment: "true"
           github-token: ${{ secrets.GH_TOKEN }} #Optional 
-          # working-directory: ./sub-directory
+          working-directory: ./app
