--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install
-        run: npm install
+        run: cd app && npm install
 
       - name: Test
         run: cd app && npm run test
