--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -4,12 +4,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  sls-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v2.4.1
       - uses: actions/checkout@v2
-      - uses: serverless/github-action@master
+
+      - name: Install serverless
+        run: npm i serverless -g
+
       - name: Deploy aurora
         run: cd infra/aurora/ && serverless deploy
 
