--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm i serverless -g
 
       - name: Deploy aurora
-        run: cd infra/aurora/ && serverless deploy
+        run: cd infra/general/ && serverless deploy
 
     env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
