--- a/infra/general/package.json
+++ b/infra/general/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-s3": "^3.2.0",
     "@aws-sdk/s3-request-presigner": "^3.2.0",
     "@aws-sdk/util-create-request": "^3.2.0",
-    "@aws-sdk/util-format-url": "^3.1.0"
+    "@aws-sdk/util-format-url": "^3.1.0",
+    "uuid": "^8.3.2"
   }
 }
