--- a/infra/general/resources/s3.yaml
+++ b/infra/general/resources/s3.yaml
@@ -3,7 +3,7 @@ Resources:
     Type: 'AWS::S3::Bucket'
     DeletionPolicy: Retain
     Properties:
-      BucketName: eagle-uploads-bucket
+      BucketName: eagle-uploads-bucket-${opt:stage,'dev'}
       AccessControl: PublicRead
       CorsConfiguration:
         CorsRules:
