--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,7 +1,8 @@
 name: Vercel Test & Deploy
 on:
-  pull_request:
-  workflow_dispatch:
+  push:
+    paths:
+      - 'infra/app/*'
 
 jobs:
   test:
@@ -23,7 +24,7 @@ jobs:
       - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-          # vercel-args: '--prod' #Optional
+          vercel-args: '--prod' #Optional
           vercel-org-id: ${{ secrets.ORG_ID}}  #Required
           vercel-project-id: ${{ secrets.PROJECT_ID}} #Required 
           github-comment: "true"
