test branch name

--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -2,7 +2,9 @@ name: Vercel Test & Deploy
 on:
   push:
     paths:
-      - 'app/*'
+      - "app/*"
+    branches:
+        - "main"
 
 jobs:
   test:
